<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/standard_spacing"
    tools:context=".activity.EditorActivity">

    <ImageView
        android:id="@+id/img_insert"
        android:layout_width="@dimen/img_height"
        android:layout_height="@dimen/img_height"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/standard_spacing"
        android:src="@drawable/ic_insert" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/food_name" />

        <EditText
            android:id="@+id/edt_food_name"
            style="@style/EditorStyle"
            android:hint="@string/hint_food_name"
            android:inputType="textCapWords" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/food_type" />

        <Spinner
            android:id="@+id/spinner_type"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="2"
            android:entries="@array/array_type_options"
            android:paddingRight="16dp"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/CategoryStyle"
            android:text="@string/food_price" />

        <EditText
            android:id="@+id/edt_food_price"
            style="@style/EditorStyle"
            android:hint="@string/hint_food_price"
            android:inputType="textCapWords" />
    </LinearLayout>

</LinearLayout>
